[package]
name = "powenetics-v2"
version = "0.1.0"
edition = "2021"
authors = ["Yussuf Khalil <yussuf.khalil@kit.edu>"]

[dependencies.clap]
version = "4.4"
features = ["derive"]

[dependencies.serialport]
version = "4.2"

[dependencies.log]
version = "0.4"

[dependencies.anyhow]
version = "1.0"
features = ["backtrace"]

[dependencies.thiserror]
version = "1.0"

[dependencies.csv]
version = "1.3"